# rl-gpushared-shim

./: .gitignore  CMakeLists.txt  README.md
include/: rl_gpushared_shim.hpp
java/net/runelite/client/plugins/gpushared/: GpuPluginShared.java
java/net/runelite/client/plugins/gpushared/shim/: SharedMemoryBridge.java
src/: rl_gpushared_shim.cpp
